# hush

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix  hush  main.c  meson.build
.cache/clangd/index/: main.cc.A9BEF219E25F3C63.idx
include/: alias.h  builtins.h  chain.h  command_sub.h  completion.h  config.h  control.h  dir_stack.h  environment.h  execute.h  glob.h  history.h  jobs.h  launch.h  loop.h  main.h  pipes.h  readline.h  redirection.h  signals.h  splitline.h  variables.h
src/: alias.c  builtins.c  chain.c  command_sub.c  completion.c  control.c  dir_stack.c  environment.c  execute.c  glob.c  history.c  jobs.c  launch.c  loop.c  main.c  main.cc  pipes.c  readline.c  redirection.c  signals.c  splitline.c  variables.c
